<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Registration">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/create"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/lavender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_email_et"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginTop="210dp"
        android:background="@drawable/bg"
        android:ems="10"
        android:textColor="@color/lavender"
        android:hint="@string/example"

        android:inputType="textEmailAddress"
        android:padding="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_password_et"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg"
        android:ems="10"
        android:textColor="@color/lavender"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/reg_email_et"
        app:layout_constraintStart_toStartOf="@+id/reg_email_et"
        app:layout_constraintTop_toBottomOf="@+id/reg_email_et" />

    <EditText
        android:id="@+id/reg_confirm_password_et"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg"
        android:ems="10"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/lavender"
        app:layout_constraintEnd_toEndOf="@+id/reg_password_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_password_et"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_et" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/lavender"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/reg_confirm_password_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_confirm_password_et"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password_et" />

    <Button
        android:id="@+id/goto_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:backgroundTint="@color/white"
        android:text="@string/Already"
        android:textColor="@color/lavender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>