<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="120dp"
        android:ellipsize="start"
        android:text="@string/log_in"
        android:textColor="@color/lavender"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/email"
        android:textColor="@color/lavender"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/login_email_et"
        app:layout_constraintStart_toStartOf="@+id/login_email_et" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginTop="222dp"
        android:background="@drawable/bg"
        android:ems="10"
        android:textColor="@color/lavender"
        android:hint="@string/example"
        android:inputType="textEmailAddress"
        android:padding="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg"
        android:ems="10"
        android:textColor="@color/lavender"
        android:hint="@string/pass"
        android:inputType="textPassword"

        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_et" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/pass"
        android:textColor="@color/lavender"
        app:layout_constraintBottom_toTopOf="@+id/login_password_et"
        app:layout_constraintStart_toStartOf="@+id/login_password_et" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/lavender"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_et" />

    <Button
        android:id="@+id/goto_signUP_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/white"
        android:text="@string/Sign_up"
        android:textColor="@color/lavender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>